added html markup

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -3,8 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>Great Idea!</title>
+  
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -15,49 +14,71 @@
 </head>
 
   <body>
-
+    <!--This is the header-->
+    <header>
+    <title>Great Idea!</title>
   Services
   Product
   Vision
   Features
   About
   Contact
+    </header>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+    <!--This is the first section-->
+  <s>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <h1>Innovation
+    On
+    Demand</h1>
 
-  Get Started
+    <p>Get Started</p>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </s>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<!--This is the second section-->
+<s>
+  <h2>Features</h2>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <h2>About</h2>
+  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</s>
 
+<!--This is the third section-->
+<s>
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</s> 
 
+<!--This is the fourth section-->
+<s>
+  <h2>Services</h2>
+<p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <h2>Product</h2>
+<p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
+  <h2>Vision</h2>
+  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>
+</s>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
+<!--This is the contact section-->
+<s>
+  Contact<br>
   123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
+  Somewhere, USA<br>
+  1 (888) 888-8888<br>
   sales@greatidea.io
+</s>
 
+<!--This is the footer-->
+<footer>
   Copyright Great Idea! 2018
+</footer>
   
   </body>
 </html>
