--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -12,39 +12,49 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
+<title>Great Idea!</title>
   <body>
-    <!--This is the header-->
-    <header>
-    <title>Great Idea!</title>
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-    </header>
 
-    <!--This is the first section-->
-  <s>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <!--This is the header-->
+    <nav>
+      <section class = "fsection">
+          <a href="#">Services</a>
+          <a href="#">Product</a>
+          <a href="#">Vision</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+      </section>
+      <section class = "ssection">
+        <img class = "logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </section>
+    </nav>
+
+    <!--This is the Header-->
+  <header>
+    <div class= "heading">
     <h1>Innovation
     On
     Demand</h1>
+    </div>
+  <div class= "button">
+    <button>Get Started</button>
+    </div>
+    <div>
+    <img class= "Code" src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+</header>
+<!--This is the First section-->
+<s id="secondSection">
+  <div class="Container">
+    <h2>Features</h2><br>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
 
-    <p>Get Started</p>
-
-    <img src="img/header-img.png" alt="Image of a code snippet.">
-  </s>
-
-<!--This is the second section-->
-<s>
-  <h2>Features</h2>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-
-  <h2>About</h2>
-  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  <div>
+    <h2>About</h2><br>
+    <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
 </s>
 
 <!--This is the third section-->
@@ -54,16 +64,21 @@
 
 <!--This is the fourth section-->
 <s>
-  <h2>Services</h2>
-<p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-</p>
-
-  <h2>Product</h2>
-<p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-</p>
-  <h2>Vision</h2>
-  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-  </p>
+  <div>
+    <h2>Services</h2>
+    <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+  </div>
+  <div>
+    <h2>Product</h2>
+    <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+  </div>
+  <div>
+    <h2>Vision</h2>
+    <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+  </div>
 </s>
 
 <!--This is the contact section-->
