--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -12,83 +12,84 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+<script>
+console.log("hello world");
+</script>
 <title>Great Idea!</title>
   <body>
-
-    <!--This is the header-->
-    <nav>
-      <section class = "fsection">
+  
+    <!--This is the Navigation bar-->
+    <section>
+      <nav>
           <a href="#">Services</a>
           <a href="#">Product</a>
           <a href="#">Vision</a>
           <a href="#">Features</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
-      </section>
-      <section class = "ssection">
-        <img class = "logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </section>
-    </nav>
+      </nav>
+      <img class = "logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </section>
+    
 
     <!--This is the Header-->
   <header>
-    <div class= "heading">
-    <h1>Innovation
-    On
-    Demand</h1>
-    </div>
-  <div class= "button">
-    <button>Get Started</button>
-    </div>
-    <div>
-    <img class= "Code" src="img/header-img.png" alt="Image of a code snippet.">
-    </div>
+    <section>
+      <div class = "Container">
+        <h1>Innovation
+        On
+        Demand</h1>
+        <button>Get Started</button>
+      </div>
+      <img class= "Code" src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
 </header>
+
 <!--This is the First section-->
-<s id="secondSection">
-  <div class="Container">
+<section>
+  <div class = "firstbox">
     <h2>Features</h2><br>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </div>
 
-  <div>
+  <div class = "secondbox">
     <h2>About</h2><br>
     <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </div>
-</s>
+</section>
+
+<!--This is the second section-->
+<section>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+</section> 
 
 <!--This is the third section-->
-<s>
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-</s> 
-
-<!--This is the fourth section-->
-<s>
-  <div>
+<section class ="ThirdSection">
+  <div class ="One">
     <h2>Services</h2>
     <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </p>
   </div>
-  <div>
+  <div class ="Two">
     <h2>Product</h2>
     <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </p>
   </div>
-  <div>
+  <div class ="Three">
     <h2>Vision</h2>
     <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </p>
   </div>
-</s>
+</section>
 
 <!--This is the contact section-->
-<s>
+<section id ="Contact">
   Contact<br>
   123 Way 456 Street
   Somewhere, USA<br>
   1 (888) 888-8888<br>
   sales@greatidea.io
-</s>
+</section>
 
 <!--This is the footer-->
 <footer>
