--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -34,15 +34,15 @@ console.log("hello world");
 
     <!--This is the Header-->
   <header>
-    <section>
-      <div class = "Container">
-        <h1>Innovation
-        On
-        Demand</h1>
+      <div class = "LeftHalf">
+        <h1>Innovation<br>
+        On<br>
+        Demand<br></h1>
         <button>Get Started</button>
       </div>
-      <img class= "Code" src="img/header-img.png" alt="Image of a code snippet.">
-    </section>
+      <div class ="RightHalf">
+        <img class= "Code" src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
 </header>
 
 <!--This is the First section-->
