--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -5,16 +5,16 @@
   <meta charset="utf-8">
   
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+ <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/index.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-<script>
-console.log("hello world");
-</script>
+
 <title>Great Idea!</title>
   <body>
   
